tests/good/lexical/012-int-6.clap
val x = 0b10101010

