tests/bad/interpret/009-app-unit.clap
val u = U
val x = u "foo"

